--- a/src/Components/Header/HeaderStyle.module.css
+++ b/src/Components/Header/HeaderStyle.module.css
@@ -1,3 +1,93 @@
-.con {
-    background-color: red;
+/* HeaderStyle.module.css */
+
+/* Style for the entire header */
+.landingPageHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #fff; /* Background color for the header */
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Optional shadow effect */
+  }
+  
+  /* Style for the left section (logo and navigation) */
+  .leftSection {
+    display: flex;
+    align-items: center;
+    margin-left: 10%;
+  }
+  
+  .logo {
+    font-size: 20px;
+    font-weight: 700px;
+    margin-left: 20px; /* Adjust spacing as needed */
+    color: #52489C;
+
 }
+  
+  nav ul {
+    list-style: none;
+    display: flex;
+    margin-left: 40px;
+    gap: 35px; /* Adjust spacing between navigation items */
+  }
+  
+  nav ul li a {
+    text-decoration: none;
+     color: #46435b;/* Text color for navigation links */
+    font-weight: 400px;
+    font-size: 18px;
+  }
+  
+  /* Style for the right section (cart icon and search input) */
+  .rightSection {
+    display: flex;
+    align-items: center;
+    margin-right: 10%;
+  }
+  
+  .cartSection {
+    display: flex;
+    align-items: center;
+    margin-right: 20px; /* Adjust spacing as needed */
+  }
+  
+  .cartIcon {
+    /* Style your cart icon image here */
+    width: 30px; /* Adjust the size of the cart icon */
+    height: 30px;
+    /* Add background image or use an <img> tag */
+  }
+  
+  .cartLabel {
+    margin-left: 5px; /* Spacing between the cart icon and label */
+  }
+
+ 
+  .searchInput {
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+    position: relative; /* Position relative for positioning the search icon */
+  }
+  
+  .searchIcon {
+    /* Style your search icon image here */
+    width: 20px; /* Adjust the size of the search icon */
+    height: 20px;
+    position: absolute;
+    top: 50%;
+    left: 10px; /* Adjust the left position of the search icon */
+    transform: translateY(-50%);
+  }
+  
+  .searchTextInput {
+    padding: 10px 30px; /* Adjust right padding for space for the search icon */
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    text-indent: 20px; /* Move the placeholder text to the right */
+   
+  
+  }
+  
