--- a/src/Components/Footer/FooterStyle.module.css
+++ b/src/Components/Footer/FooterStyle.module.css
@@ -1,3 +1,106 @@
-.con {
-    background-color: blue;
+/* FooterStyle.module.css */
+
+/* Style for the left section */
+.left-section {
+    flex: 1; /* Distribute available space equally */
+    padding: 20px;
+    margin-left: 70px;
+    margin-top: -20px;
+  }
+  .logo{
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 10px;
+    
+  }
+  
+  /* Style for the middle section */
+  .middle-section {
+    flex: 2; /* Distribute available space twice as much */
+    padding: 20px;
+    margin-left: 300px;
+    justify-content: center;
+    margin-top: -50px;
+  }
+  
+  /* Style for the right section */
+  .right-section {
+    flex: 1; /* Distribute available space equally */
+    padding: 20px;
+    margin-right: 40px;
+    margin-top: -40px;
+  }
+  
+  .latest{
+    font-size: large;
+    font-weight:bolder ;
+  }
+  /* Style for the entire footer */
+  .landing-page-footer {
+    display: flex; /* Use flexbox to distribute sections */
+    background-color: #E7EBEE; /* Set the background color */
+    color: #52489C; /* Text color */
+    justify-content: space-between; /* Space out the sections */
+    align-items: center; /* Center items vertically */
+    padding: 10px;
+    margin-top:20px ;
+  }
+  
+  /* Additional styling for the social links */
+  .social-links {
+    display: flex;
+    gap: 20px; /* Space between social icons */
+  }
+  
+  /* Style for social icons */
+  .social-icon {
+    width: 15px;
+    height: 15px;
+    color: #52489C;
+  }
+  
+  .social-icon:hover {
+    opacity: 0.7;
+  }
+
+  .support{
+    margin-bottom: 30px;
+  }
+
+  /* Style for the submit button */
+  button{
+    margin-top: 10px;
+    width: 100px;
+    height: 40px;
+    background-color: #52489C;
+    border-radius: 10px;
+    color: white;
+    padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  }
+
+  /* Hover effect for the button */
+button[type="submit"]:hover {
+  background-color: #555;
 }
+
+  .gifts{
+    margin-bottom: 40px;
+  }
+
+  /* Style for the input field */
+input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-size: 16px;
+  text-indent: 20px;
+}
+
+
+
+
+  
