--- a/src/Components/Footer/FooterStyle.module.css
+++ b/src/Components/Footer/FooterStyle.module.css
@@ -1,106 +1,243 @@
 /* FooterStyle.module.css */
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+/* Style for the entire footer */
+.landing-page-footer {
+  display: flex;
+  background-color: #e7ebee;
+  justify-content: space-between;
+  padding: 40px 100px 0 100px;
+  height: 274px;
+}
+.logo {
+  color: #52489c;
+  font-family: League Spartan;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding-bottom: 25px;
+}
+.logo-p {
+  color: #46435b;
+  font-family: League Spartan;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  margin-bottom: 90px;
+}
+.logo-copy {
+  color: #46435B;
+  font-family: League Spartan;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+/* Style for the middle section */
+.support {
+  color: #252335;
+  font-family: League Spartan;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding-bottom: 21px;
+}
+.phone {
+  color: #46435B;
+  font-family: League Spartan;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-bottom: 21px;
+}
+.email {
+  color: #46435B;
+  font-family: League Spartan;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-bottom: 44px;
+}
+.social-p {
+  color: #252335;
+  font-family: League Spartan;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding-bottom: 28px;
+}
+/* Style for the right section */
+.subscribe {
+  color: #46435B;
+  font-family: League Spartan;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding-bottom: 24px;
+}
+.latest {
+  color: #252335;
+  font-family: League Spartan;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding-bottom: 30px;
+}
 
-/* Style for the left section */
-.left-section {
-    flex: 1; /* Distribute available space equally */
-    padding: 20px;
-    margin-left: 70px;
-    margin-top: -20px;
+/* Additional styling for the social links */
+.social-links {
+  display: flex;
+  gap: 20px;
+}
+
+/* Style for social icons */
+.social-icon {
+  width: 20px;
+  height: 20px;
+  color: #52489c;
+}
+
+.social-icon:hover {
+  opacity: 0.7;
+}
+
+/* Style for the input field */
+.emailInput {
+  width: 356px;
+  height: 38px;
+  padding-left: 20px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-size: 1rem;
+  /* text-indent: 20px; */
+}
+
+/* Style for the submit button */
+.btn {
+  width: 8.6875rem;
+  height: 3.3125rem;
+  border: none;
+  background-color: #52489c;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #F9F9F9;
+  font-family: League Spartan;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+/* Hover effect for the button */
+.btn:hover {
+  background-color: #4031b3;
+}
+
+
+@media (max-width: 1270px) {
+  .landing-page-footer {
+    /* display: flex; */
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    height: 100%;
   }
-  .logo{
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 10px;
-    
+  .left-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-  
+  .logo {
+    padding-bottom: 10px;
+  }
+  .logo-p {
+    width: 300px;
+    font-size: 1rem;
+    margin-bottom: 30px;
+  }
+  .logo-copy {
+    display: none;
+  }
   /* Style for the middle section */
   .middle-section {
-    flex: 2; /* Distribute available space twice as much */
-    padding: 20px;
-    margin-left: 300px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    margin-top: -50px;
+    align-items: center;
   }
-  
+  .support {
+    font-size: 1rem;
+    padding-bottom: 11px;
+  }
+  .phone {
+    font-size: 1rem;
+    padding-bottom: 11px;
+  }
+  .email {
+    width: 197px;
+    font-size: 1rem;
+    padding-bottom: 44px;
+  }
+  .social-p {
+    font-size: 1rem;
+    padding-bottom: 18px;
+  }
   /* Style for the right section */
   .right-section {
-    flex: 1; /* Distribute available space equally */
-    padding: 20px;
-    margin-right: 40px;
-    margin-top: -40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-  
-  .latest{
-    font-size: large;
-    font-weight:bolder ;
+  .subscribe {
+    width: 190px;
+    margin-top: 28px;
+    font-size: 1rem;
+    padding-bottom: 10px;
   }
-  /* Style for the entire footer */
-  .landing-page-footer {
-    display: flex; /* Use flexbox to distribute sections */
-    background-color: #E7EBEE; /* Set the background color */
-    color: #52489C; /* Text color */
-    justify-content: space-between; /* Space out the sections */
-    align-items: center; /* Center items vertically */
-    padding: 10px;
-    margin-top:20px ;
+  .latest {
+    width: 250px;
+    font-size: 1.25rem;
+    padding-bottom: 25px;
   }
   
   /* Additional styling for the social links */
   .social-links {
-    display: flex;
-    gap: 20px; /* Space between social icons */
+    gap: 30px;
   }
   
   /* Style for social icons */
   .social-icon {
-    width: 15px;
-    height: 15px;
-    color: #52489C;
+    height: 26px;
   }
   
-  .social-icon:hover {
-    opacity: 0.7;
+  /* Style for the input field */
+  .emailInput {
+    width: 331px;
+    margin-bottom: 30px;
+    border: none;
+    font-size: 1rem;
   }
-
-  .support{
+  
+  /* Style for the submit button */
+  .btn {
+    width: 8.1875rem;
+    height: 3.0625rem;
+    font-size: 1rem;
     margin-bottom: 30px;
   }
-
-  /* Style for the submit button */
-  button{
-    margin-top: 10px;
-    width: 100px;
-    height: 40px;
-    background-color: #52489C;
-    border-radius: 10px;
-    color: white;
-    padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
-  }
-
-  /* Hover effect for the button */
-button[type="submit"]:hover {
-  background-color: #555;
 }
-
-  .gifts{
-    margin-bottom: 40px;
-  }
-
-  /* Style for the input field */
-input[type="email"] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  font-size: 16px;
-  text-indent: 20px;
-}
-
-
-
-
-  
