--- a/src/Components/Header/HeaderStyle.module.css
+++ b/src/Components/Header/HeaderStyle.module.css
@@ -18,7 +18,7 @@
     justify-content: space-between;
     /* align-items: center; */
     padding: 28px 100px 0 100px;
-    background-color: #fff; /* Background color for the header */
+    /* background-color: #F9F9F9; */
     /* box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); */
   }
   
