--- a/src/Components/Dropdown/MobileDropDown.module.css
+++ b/src/Components/Dropdown/MobileDropDown.module.css
@@ -5,7 +5,7 @@
     background: #FFF;
     padding: 30px 30px 20px 30px;
     margin-top: 20px;
-    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .contentDiv {
@@ -24,6 +24,10 @@
 }
 
 .item1Header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 200px;
     color: #46435B;
     font-family: League Spartan;
     font-size: 1rem;
@@ -51,6 +55,10 @@
 }
 
 .occasionsHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 200px;
     color: #52489C;
     font-family: League Spartan;
     font-size: 1rem;
@@ -58,6 +66,8 @@
     font-weight: 600;
     line-height: normal;
     margin: 10px 0;
+    /* width: 102px; */
+}
+.occasionsHeaderSpan {
     border-bottom: 1px solid #52489C;
-    width: 102px;
 }
