--- a/src/Components/HomePage/HomePageStyle.module.css
+++ b/src/Components/HomePage/HomePageStyle.module.css
@@ -4,7 +4,18 @@
     box-sizing: border-box;
     text-decoration: none;
 }
-
+/* added to cart pop up style start */
+.addedToCartPopup {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    background: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    z-index: 999;
+  }
+/* added to cart pop up style end */
 /* Mobile hidden start */
 .landingRightPicMobile {
     display: none;
