--- a/src/Components/Header/HeaderStyle.module.css
+++ b/src/Components/Header/HeaderStyle.module.css
@@ -178,12 +178,12 @@
   .menueOpenImg {
     display: block;
   }
-
   .mobileDropDownDiv {
     position: absolute;
     /* top: 0; */
     /* left: 0; */
     right: 0;
+    z-index: 999;
   }
 
   .searchIcon {
