--- a/src/Components/ProductDetails/ProductDetails.module.css
+++ b/src/Components/ProductDetails/ProductDetails.module.css
@@ -1,12 +1,22 @@
 .section1 {
     width: 1086px;
-    /* width: 100%; */
     margin: auto;
     display: flex;
-    /* justify-content: center; */
     gap: 105px;
     padding-bottom: 110px;
 }
+/* added to cart pop up style start */
+.addedToCartPopup {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    background: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    z-index: 999;
+  }
+/* added to cart pop up style end */
 
 .section1Div1 {
     margin-top: 89px;
@@ -422,6 +432,10 @@
 
 /* Mobile style start */
 @media (max-width: 1270px) {
+    .HeaderDiv {
+        /* padding-bottom: 50px; */
+        margin-bottom: 50px;
+    }
 
     /* Hidden style start */
     .TopPicks3Mobile {
@@ -430,15 +444,10 @@
 
     /* Hidden style end */
     .section1 {
-        /* width: 370px; */
         width: 100%;
-        /* margin: auto; */
-        /* display: flex; */
         flex-direction: column;
         position: relative;
-        /* justify-content: center; */
-        /* gap: 105px; */
-        /* padding-bottom: 110px; */
+
     }
 
     .section1Div1 {
@@ -446,8 +455,8 @@
         flex-direction: column;
         /* justify-content: center; */
         align-items: center;
-        margin-top: 250px;
-        padding: 0 0px;
+        margin-top: 200px;
+        /* padding: 250px 0 0 0px; */
     }
 
     .section1Div2Mobile {
@@ -456,10 +465,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        /* padding: 0 0px; */
+        /* padding: -100px 0px 0 0; */
         position: absolute;
-        /* top: 0px; */
-        margin-top: -100px;
+        top: 0px;
+        margin-top: -50px;
     }
 
     .section1header {
@@ -519,7 +528,7 @@
         width: 370px;
         display: flex;
         flex-direction: column;
-        margin-top: 135px;
+        margin-top: 35px;
         padding: 0 20px;
     }
 
