updated the footer

--- a/src/Components/Footer/FooterStyle.module.css
+++ b/src/Components/Footer/FooterStyle.module.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
+  /* overflow: hidden; */
 }
 /* Style for the entire footer */
 .landing-page-footer {
