--- a/src/Components/Header/HeaderStyle.module.css
+++ b/src/Components/Header/HeaderStyle.module.css
@@ -17,10 +17,12 @@
 
 /* Style for the entire header */
 .landingPageHeader {
+  width: 1238px;
+  margin: auto;
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
-  padding: 28px 100px 0 100px;
+  align-items: center;
+  padding: 28px 0px 0 0px;
   /* background-color: #F9F9F9; */
   /* box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); */
 }
@@ -155,6 +157,9 @@
 /* Mobile style start */
 @media (max-width: 1270px) {
   .landingPageHeader {
+    /* width: 370px; */
+    width: 100%;
+    margin: auto;
     /* display: flex; */
     justify-content: space-between;
     /* align-items: center; */
