--- a/src/Components/HomePage/HomePageStyle.module.css
+++ b/src/Components/HomePage/HomePageStyle.module.css
@@ -290,29 +290,38 @@
 .TopPicksDiv {
     margin: 0 0px 80px 0px;
     /* padding: 0 99px 0 99px; */
-
+    /* width: 1260px; */
     /* margin-left: 20px; */
     /* background-color: red; */
+    /* margin: auto; */
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: center;
     align-items: center;
 }
 
 .TopPicksDiv1 {
     /* padding: 0 99px 0 99px; */
-    /* margin: 0 auto; */
+    margin: 0 auto;
     width: 1260px;
+    /* width: 100%; */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    /* align-items: center; */
+    /* flex-grow: 1; */
+    align-items: center;
     /* justify-content: center; */
     gap: 20px;
     /* justify-content: space-between; */
 }
 
 .TopPicksHeader {
+    width: 1260px;
+    margin: 0 auto;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    /* padding: 0 30px; */
     color: #252335;
     font-family: League Spartan;
     font-size: 2rem;
@@ -641,6 +650,9 @@
 
     /* Top Picks styles start */
     .TopPicksDiv {
+        /* width: 100%; */
+        overflow: hidden;
+        /* width: 100%; */
         margin: 0 0px 0px 0px;
         margin-left: 0px;
         /* background-color: red; */
@@ -653,6 +665,7 @@
 
     .TopPicksDiv1 {
         width: 370px;
+        /* width: 100%; */
         display: flex;
         flex-direction: row;
         justify-content: center;
