--- a/src/Components/Header/HeaderStyle.module.css
+++ b/src/Components/Header/HeaderStyle.module.css
@@ -38,6 +38,7 @@
   color: #52489C;
   font-family: League Spartan;
   font-size: 1.25rem;
+  font-weight: 700;
   font-style: normal;
   font-weight: bold;
   line-height: normal;
@@ -117,6 +118,10 @@
   border: none;
 }
 .cartupdate {
+  font-family: League Spartan;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
   text-align: center;
   width: 70%;
   height: 70%;
