--- a/src/Components/ProductDetails/ProductDetails.module.css
+++ b/src/Components/ProductDetails/ProductDetails.module.css
@@ -10,11 +10,15 @@
     position: fixed;
     top: 10px;
     right: 10px;
-    background: #007bff;
+    background: #52489c;
     color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
     z-index: 999;
+    font-family: League Spartan;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 700;
   }
 /* added to cart pop up style end */
 
